@@ -114,10 +114,9 @@ it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeplo
 it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeployerConfiguration.resourceType.displayName = Resource type
 it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeployerConfiguration.resourceTypeGeneral.description = The general type of a resource
 it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeployerConfiguration.resourceTypeGeneral.displayName = Resource type general
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.languages.description = A comma-separated list of language tags. Use ${languages} to depend on ST Properties
+it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.languages.description=A comma-separated list of language tags that will inform the computation of the variable ${labels}. Use ${userLangs} to depend on the user settings for the project
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.languages.displayName = Languages
-it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.template.description = The template for the rendering of resources
+it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.template.description=The template for the rendering of resources. If not template is provided, defaults to: ${labels}
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.template.displayName = Template
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.variables.description = Definition of the variables that can be used inside the template
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.variables.displayName = Variables
@@ -241,23 +240,19 @@ it.uniroma2.art.semanticturkey.extension.impl.rendering.BaseRenderingEnginePUSet
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineFactory.name = W3C OntoLex-Lemon rendering engine
 it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineFactory.description = A rendering engine based on the W3C OntoLex-Lemon Model
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineConfiguration.shortName = W3C OntoLex-Lemon rendering engine PU settings
+it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineConfiguration.shortName=W3C OntoLex-Lemon rendering engine configuration
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineFactory.name = RDFS rendering engine
 it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineFactory.description = A rendering engine based on rdfs:label(s)
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineConfiguration.shortName = RDFS rendering engine PU settings
+it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineConfiguration.shortName=RDFS rendering engine configuration
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineFactory.name = SKOS rendering engine
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineFactory.description = A rendering engine based on skos:prefLabel(s)
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineConfiguration.shortName = SKOS rendering engine PU settings
+it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineConfiguration.shortName=SKOS rendering engine configuration
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineFactory.name = SKOSXL rendering engine
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineFactory.description = A rendering engine based on skosxl:prefLabel(s)
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineConfiguration.shortName = SKOSXL rendering engine PU settings
+it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineConfiguration.shortName=SKOSXL rendering engine configuration
 
 it.uniroma2.art.semanticturkey.extension.extpts.datasetmetadata.DatasetMetadataExporterSettings.shortName = Common settings for dataset metadata exporter
 
