@@ -114,10 +114,9 @@ it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeplo
 it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeployerConfiguration.resourceType.displayName = Tipo di risorsa
 it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeployerConfiguration.resourceTypeGeneral.description = Il tipo generale di una risorsa
 it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.EcoPortalDeployerConfiguration.resourceTypeGeneral.displayName = Tipo generale di risorsa
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.languages.description = Una lista separata da virgole di tag di lingue. Utilizza ${languages} per dipendere dalle proprietà di Semantic Turkey
+it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.languages.description=Una lista separata da virgole di tag di lingue che informeranno il calcolo della variabile ${labels}. Utilizza ${userLangs} per dipendere dalle impostazioni dell''utente per il progetto
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.languages.displayName = Lingue
-it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.template.description = Il modello per il rendering delle risorse
+it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.template.description=Il modello per il rendering delle risorse. Se non viene fornito alcun modello, ripiega su: ${labels}
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.template.displayName = Modello
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.variables.description = Definizione delle variabili che possono essere usate all''interno del modello
 it.uniroma2.art.semanticturkey.extension.impl.rendering.AbstractLabelBasedRenderingEngineConfiguration.variables.displayName = Variabili
@@ -241,23 +240,19 @@ it.uniroma2.art.semanticturkey.extension.impl.rendering.BaseRenderingEnginePUSet
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineFactory.name = Rendering engine per W3C OntoLex-Lemon
 it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineFactory.description = Un rendering engine basato sul modello W3C OntoLex-Lemon
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineConfiguration.shortName = PU Settings del rendering engine W3C OntoLex-Lemon
+it.uniroma2.art.semanticturkey.extension.impl.rendering.ontolexlemon.OntoLexLemonRenderingEngineConfiguration.shortName=Configurazione del rendering engine W3C OntoLex-Lemon
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineFactory.name = Rendering engine per RDFS
 it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineFactory.description = Un rendering engine basato sul rdfs:label
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineConfiguration.shortName = PU Settings del rendering engine RDFS
+it.uniroma2.art.semanticturkey.extension.impl.rendering.rdfs.RDFSRenderingEngineConfiguration.shortName=Configurazione del rendering engine RDFS
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineFactory.name = Rendering engine per SKOS
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineFactory.description = Un rendering engine basato su skos:prefLabel
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineConfiguration.shortName = PU Settings del rendering engine SKOS
+it.uniroma2.art.semanticturkey.extension.impl.rendering.skos.SKOSRenderingEngineConfiguration.shortName=Configurazione del rendering engine SKOS
 
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineFactory.name = Rendering engine per SKOSXL
 it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineFactory.description = Un rendering engine basato su skosxl:prefLabel
-
-it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineConfiguration.shortName = PU Settings del rendering engine SKOSXL
+it.uniroma2.art.semanticturkey.extension.impl.rendering.skosxl.SKOSXLRenderingEngineConfiguration.shortName=Configurazione del rendering engine SKOSXL
 
 it.uniroma2.art.semanticturkey.extension.extpts.datasetmetadata.DatasetMetadataExporterSettings.shortName = Impostazioni comuni per i dataset metadata exporter
 
